ci: delete root node_modules before packaging in step 6

--- a/.github/workflows/6_build.yml
+++ b/.github/workflows/6_build.yml
@@ -54,6 +54,8 @@ jobs:
       - name: Replace Readme for marketplace
         run: node scripts/change_readme.js ${{ github.event.inputs.npm_channel }}
       # This is done like this (cd & install) because vsce is very picky on what it expects
+      - name: Delete root node_modules
+        run: rm -rf node_modules
       - name: Install Dependencies in ./packages/vscode
         run: cd packages/vscode && npm install
       - name: Build vsix
