--- a/.github/workflows/7_publish.yml
+++ b/.github/workflows/7_publish.yml
@@ -53,7 +53,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
 
       - name: publish vsix to marketplace
-        run: cd packages/vscode && ./node_modules/.bin/vsce publish --pat ${{ secrets.AZURE_DEVOPS_PERSONAL_ACCESS_TOKEN}} --packagePath ${{github.workspace}}/${{ github.event.inputs.asset_name }}
+        run: cd packages/vscode && npx vsce publish --pat ${{ secrets.AZURE_DEVOPS_PERSONAL_ACCESS_TOKEN}} --packagePath ${{github.workspace}}/${{ github.event.inputs.asset_name }}
 
       - name: 'Set current job url in SLACK_FOOTER env var'
         if: ${{ always() }}
@@ -104,7 +104,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Publish vsix to open-vsx.org
-        run: cd packages/vscode && ./node_modules/.bin/ovsx publish ${{github.workspace}}/${{ github.event.inputs.asset_name }} --pat  ${{ secrets.OPEN_VSX_ACCESS_TOKEN }}
+        run: cd packages/vscode && npx ovsx publish ${{github.workspace}}/${{ github.event.inputs.asset_name }} --pat  ${{ secrets.OPEN_VSX_ACCESS_TOKEN }}
 
       - name: 'Set current job url in SLACK_FOOTER env var'
         if: ${{ always() }}
