apply changes to 6 and try new action

--- a/.github/workflows/PR_build_extension.yml
+++ b/.github/workflows/PR_build_extension.yml
@@ -42,27 +42,25 @@ jobs:
         run: npm run compile
       - run: rm -rf node_modules
       - run: cd packages/vscode && npm install
+      - name: Build vsix
+        run: npm --workspace prisma-insider run package -- --yarn
 
-      - name: Build vsix 1
-        run: npm --workspace prisma-insider run package --
-
-      # - name: Build vsix 2
-      #   run: npm --workspace prisma-insider run package -- --yarn
-
+      # This is very limited
+      # Only 90 days rentention and cannot get a link easily
       - uses: actions/upload-artifact@v3
         with:
           name: pr-artifact
           path: ./packages/vscode/*.vsix
 
-      # - name: Add artifact to PR
-      #   uses: gavv/pull-request-artifacts@v1.0.0
-      #   with:
-      #     commit: ${{ github.event.pull_request.head.sha }}
-      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
-      #     artifacts-branch: artifacts
-      #     artifacts-dir: pull-request-artifacts
-      #     artifacts: |
-      #       ./packages/vscode/prisma-insider-.vsix
+      - name: Add artifact to PR
+        uses: gavv/pull-request-artifacts@v1.0.0
+        with:
+          commit: ${{ github.event.pull_request.head.sha }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          artifacts-branch: artifacts
+          artifacts-dir: pull-request-artifacts
+          artifacts: |
+            ./packages/vscode/*.vsix
 
   slack:
     name: Send slack notification
