--- a/.github/workflows/PR_build_extension.yml
+++ b/.github/workflows/PR_build_extension.yml
@@ -42,8 +42,7 @@ jobs:
       - run: rm -rf node_modules
       - run: cd packages/vscode && npm install
       - name: Build vsix
-        # run: npm --workspace prisma-insider run package -- --yarn --out=prisma.vsix
-        run: npm --workspace prisma-insider run package --
+        run: npm --workspace prisma-insider run package -- --out=prisma.vsix
 
       # This is very limited
       # Only 90 days rentention and cannot get a link easily
@@ -52,15 +51,15 @@ jobs:
           name: pr-artifact
           path: ./packages/vscode/*.vsix
 
-      # - name: Add artifact to PR
-      #   uses: gavv/pull-request-artifacts@v1.0.0
-      #   with:
-      #     commit: ${{ github.event.pull_request.head.sha }}
-      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
-      #     artifacts-branch: artifacts
-      #     artifacts-dir: pull-request-artifacts
-      #     artifacts: |
-      #       ./packages/vscode/prisma.vsix
+      - name: Add artifact to PR
+        uses: gavv/pull-request-artifacts@v1.0.0
+        with:
+          commit: ${{ github.event.pull_request.head.sha }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          artifacts-branch: artifacts
+          artifacts-dir: pull-request-artifacts
+          artifacts: |
+            ./packages/vscode/prisma.vsix
 
   slack:
     name: Send slack notification
