--- a/.github/workflows/PR_build_extension.yml
+++ b/.github/workflows/PR_build_extension.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Install dependencies in ./packages/vscode
         run: cd packages/vscode && npm install
       - name: Build vsix
-        run: cd packages/vscode && npm run package --
+        run: cd packages/vscode && npm run package -- --ignoreFile=.vscodeignore
         # run: cd packages/vscode && npm run package -- --out=prisma.vsix
 
       # This is very limited
