--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build all packages
         run: npm run compile
       - name: Run Language Server tests
-        run: lerna run test --scope @prisma/language-server
+        run: npx lerna run test --scope @prisma/language-server
       - name: Run VS Code extension tests in headless mode
         uses: GabrielBB/xvfb-action@v1.6
         with:
