--- a/packages/language-server/tsconfig.json
+++ b/packages/language-server/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "target": "es6",
     "outDir": "dist",
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true,
     "lib": ["es6"],
     "sourceMap": true,
     "esModuleInterop": true,
