fix wget & use PRISMA_USE_LOCAL_LS

--- a/.github/workflows/PR_build_extension.yml
+++ b/.github/workflows/PR_build_extension.yml
@@ -11,6 +11,7 @@ on:
       - '.github/CODEOWNERS'
 
 env:
+  PRISMA_USE_LOCAL_LS: true
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
   ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
   PRISMA_TELEMETRY_INFORMATION: 'language-tools PR_build_extension.yml'
