tweak PR build script

--- a/.github/workflows/PR_build_extension.yml
+++ b/.github/workflows/PR_build_extension.yml
@@ -11,7 +11,6 @@ on:
       - '.github/CODEOWNERS'
 
 env:
-  PRISMA_USE_LOCAL_LS: true
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
   ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
   PRISMA_TELEMETRY_INFORMATION: 'language-tools PR_build_extension.yml'
@@ -47,6 +46,12 @@ jobs:
           node scripts/update_package_json_file_PR_build.js
         env:
           PR_NUMBER: ${{ github.event.number }}
+      # So we can use the local language server and don't have to publish it to npm first
+      # Note that linked node_modules are not supported https://github.com/microsoft/vscode-vsce/issues/203
+      - name: Copy language-server dist directory inside vscode package
+        run: |
+          cp -R packages/language-server packages/vscode
+          rm -R packages/vscode/language-server/src packages/vscode/language-server/test
       - name: Build vsix
         run: cd packages/vscode && npm run package -- --out=prisma.vsix
 
