--- a/.github/workflows/PR_build_extension.yml
+++ b/.github/workflows/PR_build_extension.yml
@@ -56,15 +56,14 @@ jobs:
         run: cd packages/vscode && npm run package -- --out=prisma.vsix
 
       # Upload to the current job run
-      # This is very limited
-      # Only 90 days rentention and cannot get a link easily
+      # This is very limited: Only 90 days rentention and cannot get a link easily
       - uses: actions/upload-artifact@v3
         with:
           name: pr-artifact
           path: ./packages/vscode/*.vsix
 
-      # Upload again but this time as a commit on the `artifacts` branch
-      # And post message witht the link in the PR
+      # Add artifact as a commit on the `artifacts` branch
+      # and post message with the link in the PR
       - name: Add artifact to PR
         # Skip for Renovate (only build)
         if: "!contains(github.actor, 'renovate')"
@@ -77,6 +76,23 @@ jobs:
           artifacts: |
             ./packages/vscode/prisma.vsix
 
+      # Additionally post a comment with a link to GitPod that can use built extension instantly
+      - name: Find existing comment
+        if: "!contains(github.actor, 'renovate')"
+        uses: peter-evans/find-comment@v1
+        id: fc
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: 'github-actions[bot]'
+          body-includes: "via GitPod"
+
+      - name: Create comment
+        if: "!contains(github.actor, 'renovate') && steps.fc.outputs.comment-id == ''"
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: "[Try this extension build via GitPod](https://gitpod.io/#vsix=https%3A%2F%2Fgithub.com%2Fprisma%2Flanguage-tools%2Fblob%2Fartifacts%2Fpull-request-artifacts%2Fpr${{ github.event.pull_request.number }}-prisma.vsix%3Fraw%3Dtrue/https://github.com/prisma/language-tools-gitpod)"
+      
   slack:
     name: Send slack notification
     runs-on: ubuntu-latest
