add codecov reports

--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "npm run build -- -w",
-    "test": "mocha --ui tdd --useColors true  ./dist/src/__test__/**/*.test.js",
+    "test": "nyc --reporter=clover --reporter=text-summary mocha --ui tdd --useColors true  ./dist/src/__test__/**/*.test.js",
     "pretest": "tsc"
   },
   "main": "./dist/index.js",
