--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -42,3 +42,8 @@ jobs:
       - name: Catch version incompatibilities
         if: matrix.os == 'ubuntu-latest'
         run: npm run testScripts
+      - uses: codecov/codecov-action@v3
+        with:
+          files: ./scripts/__tests__/coverage/clover.xml,./packages/language-server/coverage/clover.xml
+          flags: ${{ matrix.os }}
+          name: ${{ matrix.os }}
