--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 
 # Coverage directory used by tools like istanbul
 coverage
+.nyc_output
 
 # Dependency directory
 **/node_modules/**
