--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -34,6 +34,7 @@
     "@types/js-levenshtein": "1.1.1",
     "js-levenshtein": "1.1.6",
     "klona": "2.0.5",
+    "nyc": "15.1.0",
     "vscode-languageserver": "8.0.2",
     "vscode-languageserver-textdocument": "1.0.5"
   },
