--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "28.1.3",
     "lerna": "5.4.0",
     "lint-staged": "13.0.3",
+    "p-retry": "4.6.2",
     "prettier": "2.7.1",
     "semver": "7.3.7",
     "typescript": "4.7.4",
