--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -16,10 +16,8 @@
     "@prisma/language-server": "31.0.1387",
     "checkpoint-client": "1.1.21",
     "chokidar": "3.5.3",
+    "fsevents": "2.3.2",
     "vscode-languageclient": "7.0.0"
-  },
-  "optionalDependencies": {
-    "fsevents": "2.3.2"
   },
   "repository": {
     "type": "git",
